update restdocs